--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -74,7 +74,7 @@
 .header.headerMainEdit {
 
 	.icon.big { width: 28px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
-	.icon.big.home { width: 32px; margin-right: 10px; }
+	.icon.big.home, .icon.big.expand { width: 32px; margin-right: 10px; }
 	.icon.big.nav { width: 32px; margin-left: 10px; }
 	.icon.big:hover, .icon.big.hover { background-color: #f3f2ec; }
 
