--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -83,7 +83,7 @@
 		line-height: 24px; width: 100%; text-align: center; transition: $transitionFast; -webkit-app-region: no-drag;
 	}
 	.path {
-		.item { line-height: 20px; vertical-align: middle; max-width: 100%; text-align: left; }
+		.item { line-height: 20px; vertical-align: middle; max-width: calc(100% - 16px); text-align: left; }
 		.item {
 			.iconObject { flex-shrink: 0; }
 			.name { @include text-overflow-nw; width: 100%; }
