--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -62,11 +62,13 @@
 				.icon.plus { background-image: url('~img/icon/plus/menu0.svg'); }
 
 				.clickable { width: 228px; padding: 4px; display: flex; transition: $transitionFast; border-radius: 4px; }
-				.clickable.canEdit { cursor: pointer; }
-				.clickable.canEdit:hover { background: rgba(172,169,150,0.1); }
 
 				.icon { flex-shrink: 0; width: 20px; height: 20px; margin-right: 8px; }
 				.name { width: 200px; @include text-overflow-nw; line-height: 20px; color: $colorVeryDarkGrey; }
+			}
+			.item.canEdit, .item.add {
+				.clickable { cursor: pointer; }
+				.clickable:hover { background: rgba(172,169,150,0.1); }
 			}
 
 			.item.add { line-height: 20px; }
