--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -74,7 +74,7 @@
 			.icon.plus:hover { background-image: url('~img/icon/plus/menu1.svg'); }
 		}
 		.section:last-child::after { display: none; }
-		.section::after { margin: 12px 30px 3px 30px; display: none; }
+		.section::after { margin: 12px 28px 3px 28px; display: none; }
 
 		#section-featured::after { display: block; }
 
@@ -86,6 +86,7 @@
 
 			.icon.fav {
 				width: 32px; height: 32px; background-size: 20px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; border-radius: 4px; 
+				margin: 0px;
 			}
 			.icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
 			.icon.fav:hover { background-color: rgba(172,169,150,0.1); }
@@ -94,7 +95,7 @@
 			.info.canEdit { cursor: pointer; }
 			.info.canEdit:hover { background: rgba(172,169,150,0.1); }
 
-			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 242px); line-height: 22px; transition: background 0.2s ease-in-out; }
+			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: 100%; line-height: 22px; transition: background 0.2s ease-in-out; }
 			.cell.canEdit:hover { background: rgba(172,169,150,0.1); }
 
 			.cell.c-select { padding: 4px 8px; }
