--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -63,7 +63,8 @@
 			.icon.icon { background-image: url('~img/icon/add/icon1.svg'); }
 			.icon.addCover { background-image: url('~img/icon/add/cover1.svg'); }
 			.icon.layout { background-image: url('~img/icon/add/layout1.svg'); }
-			.icon.relation { background-image: url('~img/icon/add/icon1.svg');  }
+			.icon.relation { background-image: url('~img/icon/add/relation1.svg'); }
+
 			.txt { line-height: 18px; vertical-align: middle; }
 		}
 		
