--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -95,7 +95,7 @@
 			.info.canEdit { cursor: pointer; }
 			.info.canEdit:hover { background: rgba(172,169,150,0.1); }
 
-			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: 100%; line-height: 22px; transition: background 0.2s ease-in-out; }
+			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 236px); line-height: 22px; transition: background 0.2s ease-in-out; }
 			.cell.canEdit:hover { background: rgba(172,169,150,0.1); }
 
 			.cell.c-select { padding: 4px 8px; }
