--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -117,6 +117,11 @@
 	.controlButtons { left: 144px !important; }
 }
 
+.editorWrapper.isHuman.withIconAndCover { padding-top: 214px; }
+.editorWrapper.isHuman.withIconAndCover {
+	.controlButtons { bottom: 26px; }
+}
+
 .editorWrapper.align1, .editorWrapper.isHuman.align1 { 
 	.controlButtons { left: 0px !important; text-align: center; }
 }
