--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -63,6 +63,7 @@
 
 .cellContent.c-object {
 	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; white-space: nowrap; cursor: pointer; }
+	.element:last-child { margin-right: 0px; }
 	.element {
 		.name { line-height: 20px; width: 100%; @include text-overflow-nw; }
 	}
