--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -3,7 +3,12 @@
 .popups {
 	.popup.popupPage {
 		.innerWrap { width: 960px; height: calc(100% - 128px); padding: 0px; }
-		.page { padding: 0px; }
+		.content { height: 100%; }
+		#wrap { height: 100%; }
+
+		.page { padding: 0px; height: 100%; }
+		.page > div { height: 100%; }
+
 		.header { position: absolute; padding: 0px; border-radius: 12px 12px 0px 0px; top: 0px !important; }
 		.header {
 			.menu { right: 0px; top: 0px; }
@@ -11,7 +16,7 @@
 		.footer { display: none; }
 
 		.pageMainEdit {
-			#bodyWrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+			#bodyWrapper > .loaderWrapper { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
 			
 			.content { height: 100%; padding-top: 38px; }
 			.content > .wrap { height: 100%; }
