--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -112,14 +112,14 @@
 			.iconObject, .icon.dnd { flex-shrink: 0; }
 			.name { width: 100%; margin-right: 6px; }
 
-			.clickable { width: calc(100% - 68px); margin-right: 6px; display: flex; }
+			.clickable { width: calc(100% - 108px); margin-right: 6px; display: flex; }
 			.clickable {
 				.name { margin: 0px; width: 100%; }
 			}
 
 			.caption { 
 				@include text-overflow-nw; display: inline-block; vertical-align: top; color: $colorMediumGrey; @include text-small; text-align: right;
-				flex-shrink: 0; line-height: 20px;
+				flex-shrink: 0; line-height: 20px; width: 80px;
 			}
 		}
 
