--- a/src/scss/popup/help.scss
+++ b/src/scss/popup/help.scss
@@ -18,6 +18,6 @@
 			.icon.twitter:hover { background-image: url('~img/icon/twitter1.svg'); }
 		}
 
-		.content { height: 100%; overflow-y: auto; padding: 60px 80px 20px 80px; }
+		.content { padding: 60px 80px 40px 80px; }
 	}
 }
