--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -47,8 +47,16 @@
 	src: url('~font/lcg/medium.otf') format('opentype');
 }
 @font-face {
+	font-family: 'Lcg'; font-style: italic; font-weight: 500;
+	src: url('~font/lcg/mediumitalic.ttf') format('truetype');
+}
+@font-face {
 	font-family: 'Lcg'; font-style: bold; font-weight: 600;
 	src: url('~font/lcg/bold.otf') format('opentype');
+}
+@font-face {
+	font-family: 'Lcg'; font-style: italic; font-weight: 600;
+	src: url('~font/lcg/bolditalic.ttf') format('truetype');
 }
 
 @font-face {
