change header fonts

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -34,6 +34,7 @@
 	src: url('~font/plex/bolditalic.ttf') format('truetype');
 }
 
+/*
 @font-face {
 	font-family: 'Lcg'; font-style: normal; font-weight: 400;
 	src: url('~font/lcg/regular.otf') format('opentype');
@@ -58,6 +59,7 @@
 	font-family: 'Lcg'; font-style: italic; font-weight: 600;
 	src: url('~font/lcg/bolditalic.ttf') format('truetype');
 }
+*/
 
 @font-face {
 	font-family: 'Inter'; font-style: normal; font-weight: 400;
