--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -24,12 +24,17 @@
 			}
 		}
 
+		.cellContent {
+			.empty { display: block; }
+		}
+
 		.cell { @include text-common; width: 70%; position: relative; padding: 5px 8px; border-radius: 4px; transition: background 0.2s ease-in-out; }
 		.cell.canEdit:hover { background: rgba(172,169,150,0.1); }
 		
 		.cell.c-select { padding: 4px 8px; }
 		.cell.c-select {
 			.tagItem { margin: 3px 6px 3px 0px; } 
+			.empty { line-height: 24px; }
 		}
 
 		.cell.isEditing { padding: 0px; }
