--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -28,7 +28,7 @@
 			.wrap { position: relative; }
 			.wrap.title { width: calc(100% - 210px); height: 36px; }
 			.wrap {
-				.placeHolder { position: absolute; left: 0px; top: 0px; color: $colorMediumGrey; }
+				.placeholder { position: absolute; left: 0px; top: 0px; color: $colorMediumGrey; }
 			}
 		}
 
