--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -23,6 +23,8 @@
 
 			.iconObject { display: none; }
 			.name { vertical-align: baseline; line-height: inherit; display: inline; word-break: break-word; white-space: normal; }
+
+			.empty { vertical-align: top; display: inline; }
 		}
 
 		.cellContent.c-file { padding: 5px 3px; }
