--- a/src/scss/block/type.scss
+++ b/src/scss/block/type.scss
@@ -4,7 +4,7 @@
 	.block.blockType { 
 		.wrapMenu { visibility: hidden; }
 
-		.placeHolder { @include text-common; color: #cbc9bd; margin-bottom: 20px; }
+		.placeholder { @include text-common; color: #cbc9bd; margin-bottom: 20px; }
 
 		.filter { padding: 0px; margin-bottom: 8px; }
 		.filter {
