--- a/src/scss/media/print.scss
+++ b/src/scss/media/print.scss
@@ -22,7 +22,7 @@
 		}
 		
 		.block.blockText {
-			.placeHolder { display: none !important; }
+			.placeholder { display: none !important; }
 		}
 		
 		.block.blockBookmark {
