--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -15,7 +15,7 @@
 	.icon.edit { display: none !important; }
 	.cellContent { 
 		position: absolute; left: 0px; top: 0px; overflow: visible !important; height: auto !important; white-space: normal !important; 
-		background: #fff; z-index: 10; min-height: 100%; box-shadow: 0px 0px 0px 1px $colorOrange inset, 0px 0px 0px 1px $colorOrange;
+		background: #fff; z-index: 10; min-height: 100%; box-shadow: 0px 0px 0px 2px $colorOrange inset;
 	}
 	.cellContent {
 		.name { display: inline-block; }
