--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -79,7 +79,7 @@
 		.item { padding: 0px 20px; margin-bottom: 1px; cursor: default; }
 		.item {
 			.icon.plus { margin-right: 4px; }
-			.icon.lock { width: 8px; height: 20px; background-image: url('~img/icon/lock.svg'); margin-right: 6px; }
+			.icon.lock { margin-right: 6px; }
 
 			.icon.fav {
 				width: 32px; height: 32px; background-size: 20px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; border-radius: 4px; 
