--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -46,9 +46,12 @@
 			.icon.filter { background-image: url('~img/icon/dataview/button/filter0.svg'); }
 			.icon.sort { background-image: url('~img/icon/dataview/button/sort0.svg'); }
 
+			.icon.plus { background-image: url('~img/icon/dataview/button/plus0.svg'); }
+
 			.icon.search:hover, .icon.search.active { background-image: url('~img/icon/dataview/button/search1.svg'); }
 			.icon.manager:hover, .icon.manager.active { background-image: url('~img/icon/dataview/button/manager1.svg'); }
 			.icon.more:hover, .icon.more.active { background-image: url('~img/icon/dataview/button/more1.svg'); }
+			.icon.plus:hover, .icon.plus.active { background-image: url('~img/icon/dataview/button/plus1.svg'); }
 
 			.icon.on {
 				.dot { display: block; }
