--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -2,7 +2,7 @@
 
 .blocks {
 	.block.blockDataview {
-		.rowHead { display: table-row; box-shadow: 0px 1px #e0ded2; white-space: nowrap; }
+		.rowHead { display: table-row; box-shadow: 0px 1px #e0ded2 inset, 0px -1px #e0ded2 inset; white-space: nowrap; }
 
 		.cellHead { 
 			text-align: left; color: $colorVeryDarkGrey; padding: 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
