--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -4,6 +4,8 @@
 .editorWrapper {
 	.blocks { margin-left: -48px; }
 
+	.focusable.isFocused { background: rgba(134, 125, 66, 0.05); }
+
 	.note { 
 		background: linear-gradient(270deg, #262cd2 0%, #0c82ef 100%); border-radius: 4px; height: 80px; color: #fff; position: absolute; 
 		left: 16px; top: 38px; width: calc(100% - 32px); line-height: 80px; text-align: center; z-index: 2;
