--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -67,6 +67,8 @@
 		.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
 		.icon.align.right { background-image: url('~img/icon/menu/align/right.svg'); }
 
+		.icon.lock { width: 8px !important; height: 20px !important; background-image: url('~img/icon/lock.svg'); }
+
 		.icon.color {
 			.inner { 
 				width: 16px; height: 16px; position: absolute; left: 50%; top: 50%; margin: -8px 0px 0px -8px; border-radius: 100%;
