--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -19,7 +19,7 @@
 	.cellContent {
 		.name { display: inline-block; }
 	}
-	.empty { display: inline-block; }
+	.empty { display: inline-block !important; visibility: visible !important; }
 
 	.icon.clear { 
 		width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 14px; top: 50%;
