--- a/src/scss/popup/search.scss
+++ b/src/scss/popup/search.scss
@@ -6,7 +6,7 @@
 
 		.content { height: 432px; overflow: visible; transition: none; transform: translate3d(0px,0px,0px); }
 		.wrap { height: 100%; }
-		.innerWrap { top: 38px; width: 40%; margin-left: -20%; transform: scale3d(1,1,1); transition: none; overflow: visible; }
+		.innerWrap { top: 38px; width: 40%; margin-left: -20%; transform: scale3d(1,1,1); transition: none; overflow: visible; border-radius: 6px; }
 		.dimmer { transition: none; }
 
 		.head { 
