--- a/src/scss/popup/search.scss
+++ b/src/scss/popup/search.scss
@@ -11,12 +11,12 @@
 
 		.head { 
 			height: 28px; position: fixed; top: -33px; left: 50%; background: #fff; width: 100%; border-radius: 6px;
-			transform: translateX(-50%); padding: 4px 8px;
+			transform: translateX(-50%); padding: 4px 8px; -webkit-app-region: no-drag;
 		}
 		.head {
 			.iconObject { margin-right: 6px; }
 			
-			.icon { width: 18px; height: 18px; vertical-align: top; margin: 2px 6px 0px 0px; }
+			.icon { width: 18px; height: 18px; vertical-align: top; margin: 1px 6px 0px 0px; }
 			.icon.search { background-image: url('~img/icon/popup/search/search.svg'); }
 			.icon.home { background-image: url('~img/icon/popup/search/home.svg'); }
 
