--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -25,7 +25,7 @@
 			.txt { line-height: 24px; color: $colorMediumGrey; }
 		}
 		
-		.section { padding: 11px 14px; border: 0px; }
+		.section { padding: 11px 14px !important; border: 0px; }
 		.section > .name { padding: 0px; margin: 0px; }
 		
 		.row { padding: 0px 12px; }
