--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -83,7 +83,7 @@
 
 			.icon.fav {
 				width: 32px; height: 32px; background-size: 20px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; border-radius: 4px; 
-				margin: 0px;
+				margin: 0px; opacity: 0;
 			}
 			.icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
 			.icon.fav:hover { background-color: rgba(172,169,150,0.1); }
@@ -155,6 +155,10 @@
 			.cell.isEditing.c-longText, .cell.isEditing.c-file { 
 				.cellContent { padding: 5px 8px; }
 			}
+		}
+
+		.item:hover {
+			.icon.fav { opacity: 1; }
 		}
 
 		.item.add { padding: 12px 22px; cursor: pointer; background: none; }
