--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -107,7 +107,10 @@ html.platformWindows {
 .over { overflow: hidden !important; }
 .empty { color: $colorMediumGrey; }
 .isDone { color: $colorMediumGrey; }
-.placeholder { pointer-events: none; }
+.placeholder { 
+	pointer-events: none; color: #cbc9bd; position: absolute; left: 0px; top: 0px; z-index: 0; width: 100%; height: 100%; cursor: text; 
+	overflow: hidden;
+}
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
