--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -5,7 +5,7 @@
 		.rowHead { display: table-row; box-shadow: 0px 1px #e0ded2 inset, 0px -1px #e0ded2 inset; white-space: nowrap; }
 
 		.cellHead { 
-			text-align: left; color: $colorVeryDarkGrey; padding: 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
+			text-align: left; color: $colorDarkGrey; padding: 14px; font-weight: 400; line-height: 20px; position: relative; 
 			@include text-overflow-nw; cursor: grab; display: inline-block; vertical-align: top;
 		}
 		.cellHead {
