--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -38,7 +38,7 @@
 	.elements {
 		.controlButtons { position: absolute; left: 0px; bottom: 18px; width: 100%; opacity: 0; transition: opacity 0.2s ease-in-out; }
 		
-		.dragWrap { width: 160px; position: absolute; left: 50%; bottom: 8px; margin-left: -80px; display: flex; z-index: 1; }
+		.dragWrap { width: 160px; position: absolute; left: 50%; top: 8px; margin-left: -80px; display: flex; z-index: 1; }
 		.dragWrap {
 			.input-drag { width: 96px; }
 			.number { width: calc(100% - 106px); }
