#nd9yxa: Design fixes

--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -45,17 +45,18 @@
 		}
 	
 		.btn { 
-			font-weight: 500; font-size: 14px; height: 28px; line-height: 26px; cursor: pointer; display: inline-block;
+			font-weight: 500; font-size: 14px; height: 28px; line-height: 28px; cursor: pointer; display: inline-block;
 			padding: 0px 8px 0px 6px; border-radius: 6px; margin-right: 8px; white-space: nowrap; transition: background 0.2s ease-in-out;
 		}
 		.btn:last-child { margin: 0px; }
+		.btn.withIcon { line-height: 26px; }
 
 		.btn.white { background: rgba(255,255,255,0.7); }
 		.btn.white:hover, .btn.white.hover { background: rgba(255,255,255,0.9); }
 		
 		.btn.black { color: #fff; background: rgba(0,0,0,0.5); line-height: 22px; }
 		.btn.black:hover, .btn.black.active { background: rgba(0,0,0,0.7); }
-		
+
 		.btn {
 			.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: middle; }
 			.icon.icon { background-image: url('~img/icon/add/icon1.svg'); }
