--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -102,7 +102,7 @@
 .iconObject.c40.isRelation,
 .iconObject.c48.withoutImage, 
 .iconObject.c40.withoutImage
-{ border-radius: 8px; }
+{ border-radius: 8px; background-color: #f3f2ec; }
 
 .iconObject.withoutImage { background-color: #f3f2ec; }
 
