--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -2,7 +2,10 @@
 
 .blocks {
 	.block.blockDataview {
-		.rowHead { display: block; box-shadow: 0px 1px #e0ded2 inset; white-space: nowrap; width: calc(100% - 4px); margin-left: 2px; }
+		.rowHead { 
+			display: block; box-shadow: 0px 1px #e0ded2 inset; white-space: nowrap; width: calc(100% - 4px); margin-left: 2px; 
+			height: 48px;
+		}
 
 		.cellHead { 
 			text-align: left; color: $colorDarkGrey; padding: 14px; font-weight: 400; line-height: 20px; position: relative; 
@@ -32,14 +35,16 @@
 		}
 		.cellHead.isDragging { border: 0px; background: rgba(255,255,255,0.75); }
 
-        .viewItem.viewGrid { display: table; width: 100%; position: relative; border-bottom: 1px solid #e0ded2; }
+        .viewItem.viewGrid { display: table; width: 100%; position: relative; box-shadow: 0px -1px #e0ded2 inset; }
 		.viewItem.viewGrid {
 			.icon.checkbox { vertical-align: top; }
 			.icon.edit { width: 48px; height: 48px; position: absolute; right: 0px; top: 0px; }
 
-			.row { display: table-row; white-space: nowrap; box-shadow: 0px 1px #e0ded2; left: 2px !important; width: calc(100% - 4px) !important; }
+			.row { 
+				display: table-row; white-space: nowrap; box-shadow: 0px 1px #e0ded2 inset; left: 2px !important; width: calc(100% - 4px) !important; 
+				height: 48px;
+			}
 			.row.add { border: 0px; }
-			.row:first-child { box-shadow: 0px 1px #e0ded2, 0px -1px #e0ded2; }
 
 			.row:hover {
 				.cellContent.isName {
